// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render 1`] = `
<DocumentFragment>
  <section
    class="card"
  >
    <div
      class="card__container"
    >
      <div
        class="card__header"
      >
        <h2>
          Title
        </h2>
      </div>
      <div
        class="card__content"
      >
        <span>
          Some content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Card component should render card with links 1`] = `
<DocumentFragment>
  <section
    class="card"
  >
    <div
      class="card__container"
    >
      <div
        class="card__header"
      >
        <h2>
          Title
        </h2>
      </div>
      <div
        class="card__content"
      >
        <span>
          Some content
        </span>
      </div>
    </div>
    <div
      class="card__actions"
    >
      <a
        class="card-action"
        href="/example.com"
        style="border-bottom: 0.125rem solid red;"
      >
        link
      </a>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Card component should render card with target 1`] = `
<DocumentFragment>
  <section
    class="card card--has-link"
  >
    <a
      aria-hidden="true"
      class="card__link"
      data-testid="background-link"
      href="/target"
      tabindex="-1"
    />
    <div
      class="card__container"
    >
      <div
        class="card__header"
      >
        <h2>
          Title
        </h2>
      </div>
      <div
        class="card__content"
      >
        <span>
          Some content
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
